--- a/ShopMyPham/ShopMyPham/Views/Shared/_MainMenuPartial.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Shared/_MainMenuPartial.cshtml
@@ -16,7 +16,7 @@
 <div class="mainmenu-area" >
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 col-md-12">
+            <div class="col-lg-12 col-md-12" style="width: 1343px">
                 <div class="mainmenu">
                     <nav>
                         <ul>
@@ -26,7 +26,7 @@
 
                             <li>
                                 <a href="@Url.Action("allBrand","Home")">Thương Hiệu<span><i class="fa fa-caret-down"></i></span></a>
-                                <div class="mega-menu" style="background-color:azure; ">
+                                <div class="mega-menu" >
                                     @foreach (var th in thuonghieu)
                                     {
                                         <span>                                            
