--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/BanHang/ListDonDat.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/BanHang/ListDonDat.cshtml
@@ -38,17 +38,39 @@
                                 @foreach (ShopMyPham.Areas.Admin.Models.DonDatModel HoaDon in list)
                                 {
                                     string idPanel = "#" + HoaDon.DonHangID;
+                                    string deleteBill = "#" + HoaDon.DonHangID;
                                     <tr>
                                         <td>@HoaDon.DonHangID</td>
                                         <td>@HoaDon.TenKhachHang</td>
                                         <td>@HoaDon.NgayDatHang</td>
                                         <td>
                                             <a href="" data-toggle="modal" data-target=@idPanel><span class="glyphicon glyphicon-eye-open" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
-                                            <a href=""><span class="glyphicon glyphicon-ok" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
-                                            <a href=""><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
+                                            <a href="@Url.Action("checkOut", "BanHang", new { id = HoaDon.DonHangID})"><span class="glyphicon glyphicon-ok" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
+                                            <a href="" data-toggle="modal" data-target=".@deleteBill"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
                                         </td>
                                     </tr>
+                                    //Popup modal Delete Bill
+                                    <div class="modal fade @deleteBill" role="dialog">
+                                        <div class="modal-dialog modal-lg">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                    <h4 class="modal-title">Xóa Đơn Hàng</h4>
+                                                </div>
 
+                                                @using (Html.BeginForm("deleteBill", "BanHang", new { id = HoaDon.DonHangID }, FormMethod.Post))
+                                                {
+                                                    <div class="modal-body">
+                                                        Bạn muốn xóa đơn hàng <b>@HoaDon.DonHangID</b> của khách hàng <b>@HoaDon.TenKhachHang</b> có <b>@string.Format("{0:#,##0 VND}", HoaDon.tongTien())</b> ?                                                       
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <input id="btnSubmit" class="btn btn-default" type="submit" value="Có" />
+                                                        <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                                                    </div>
+                                                }
+                                            </div>
+                                        </div>
+                                    </div>
                                 }
                             </tbody>
                         </table>
