--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/BanHang/ListHoaDon.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/BanHang/ListHoaDon.cshtml
@@ -44,7 +44,7 @@
                                         <td>@HoaDon.NgayDatHang</td>
                                         <td>
                                             <a href="" data-toggle="modal" data-target=@idPanel><span class="glyphicon glyphicon-eye-open" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
-                                            <a href=""><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
+                                            <a href="@Url.Action("uncheckOut", "BanHang", new { id = HoaDon.DonHangID})")"><span class="glyphicon glyphicon-remove" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>
                                         </td>
                                     </tr>
 
