--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/KhachHang/ListKhachHang.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/KhachHang/ListKhachHang.cshtml
@@ -67,12 +67,12 @@
                                                 <a href="#" class="btn-active" data-aID=@user.ID>Active</a>
                                             }
                                             |
-                                            @{ 
+                                            @{
                                                 string delete = "delete" + user.ID;
                                             }
-                                             <a href="#" data-toggle="modal" data-target='.@delete'>Xóa</a>
+                                            <a href="#" data-toggle="modal" data-target='.@delete'>Xóa</a>
 
-                                            <div class="modal fade @delete"  role="dialog">
+                                            <div class="modal fade @delete" role="dialog">
                                                 <div class="modal-dialog modal-lg">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
@@ -82,13 +82,13 @@
 
                                                         @using (Html.BeginForm("customerDelete", "KhachHang", new { id = user.ID}, FormMethod.Post))
                                                         {
-                                                            <div class="modal-body">
-                                                                Bạn muốn xóa <b>@user.Ten</b> ?
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <input id="btnSubmit" class="btn btn-default" type="submit" value="Có" />
-                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Không</button>
-                                                            </div>
+                                                        <div class="modal-body">
+                                                            Bạn muốn xóa <b>@user.Ten</b> ?
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <input id="btnSubmit" class="btn btn-default" type="submit" value="Có" />
+                                                            <button type="button" class="btn btn-default" data-dismiss="modal">Không</button>
+                                                        </div>
                                                         }
                                                     </div>
                                                 </div>
@@ -110,17 +110,17 @@
 
                                                             @using (Html.BeginForm("customerEdit", "KhachHang", FormMethod.Post))
                                                             {
-                                                                <div class="modal-body">
+                                                                <div class="modal-body" style="margin-left:350px">
                                                                     @Html.AntiForgeryToken()
                                                                     @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
                                                                     <fieldset>
                                                                         @Html.TextBoxFor(x => x.id, new { @Value = user.ID, @type = "hidden" })
                                                                         <p>Tên: @user.Ten</p>
                                                                         <p>Username: @user.Username</p>
-                                                                        <p>Password: @Html.TextBoxFor(x => x.pass, new { @Value = user.Password }) </p>
-                                                                        <p>Địa chỉ: @Html.TextBoxFor(x => x.diachi, new { @Value = user.DiaChi })</p>
-                                                                        <p>Số điện thoại: @Html.TextBoxFor(x => x.Sdt, new { @Value = user.Sdt })</p>
-                                                                        <p>Email: @Html.TextBoxFor(x => x.email, new { @Value = user.Email })</p>
+                                                                        <p>Password:<br /> @Html.TextBoxFor(x => x.pass, new { @Value = user.Password }) </p>
+                                                                        <p>Địa chỉ:<br /> @Html.TextBoxFor(x => x.diachi, new { @Value = user.DiaChi })</p>
+                                                                        <p>Số điện thoại:<br />  @Html.TextBoxFor(x => x.Sdt, new { @Value = user.Sdt })</p>
+                                                                        <p>Email:<br /> @Html.TextBoxFor(x => x.email, new { @Value = user.Email })</p>
                                                                     </fieldset>
                                                                 </div>
                                                                 <div class="modal-footer">
@@ -131,10 +131,9 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
                                         </td>
                                     </tr>
-                                }
+                                                }
                             </tbody>
                         </table>
                         @*Popup modal Add customer*@
@@ -151,42 +150,42 @@
                                                 <br>
                                                 @using (Html.BeginForm("addCustomer", "KhachHang", FormMethod.Post))
                                                 {
-                                                    <div class="form-horizontal form-label-left input_mask">
-                                                        <div class="form-group">
+                                                <div class="form-horizontal form-label-left input_mask">
+                                                    <div class="form-group">
 
-                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                                <input type="text" class="form-control has-feedback-left" name="userName" required="required" placeholder="Tài Khoản">
-                                                                <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
-                                                            </div>
-                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                                <input type="password" class="form-control has-feedback-left" name="password" required="required" placeholder="Mật Khẩu">
-                                                                <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
-                                                            </div>
-                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                                <input type="text" class="form-control has-feedback-left" name="ten" required="required" placeholder="Họ Tên">
-                                                                <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
-                                                            </div>
-                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                                <input type="text" class="form-control has-feedback-left" name="diaChi" required="required" placeholder="Địa Chỉ">
-                                                                <span class="fa fa-building form-control-feedback left" aria-hidden="true"></span>
-                                                            </div>
-                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                                <input type="text" class="form-control has-feedback-left" name="sdt" required="required" placeholder="Số Điện Thoại">
-                                                                <span class="fa fa-phone form-control-feedback left" aria-hidden="true"></span>
-                                                            </div>
-                                                            <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
-                                                                <input type="text" class="form-control has-feedback-left" name="email" required="required" placeholder="Email">
-                                                                <span class="fa fa-envelope form-control-feedback left" aria-hidden="true"></span>
-                                                            </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            <input type="text" class="form-control has-feedback-left" name="userName" required="required" placeholder="Tài Khoản">
+                                                            <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
                                                         </div>
-                                                        <div class="ln_solid"></div>
-                                                        <div class="form-group">
-                                                            <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
-                                                                <button type="reset" class="btn btn-primary">Nhập Lại</button>
-                                                                <button type="submit" class="btn btn-success">Xác Nhận</button>
-                                                            </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            <input type="password" class="form-control has-feedback-left" name="password" required="required" placeholder="Mật Khẩu">
+                                                            <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
+                                                        </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            <input type="text" class="form-control has-feedback-left" name="ten" required="required" placeholder="Họ Tên">
+                                                            <span class="fa fa-user form-control-feedback left" aria-hidden="true"></span>
+                                                        </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            <input type="text" class="form-control has-feedback-left" name="diaChi" required="required" placeholder="Địa Chỉ">
+                                                            <span class="fa fa-building form-control-feedback left" aria-hidden="true"></span>
+                                                        </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            <input type="text" class="form-control has-feedback-left" name="sdt" required="required" placeholder="Số Điện Thoại">
+                                                            <span class="fa fa-phone form-control-feedback left" aria-hidden="true"></span>
+                                                        </div>
+                                                        <div class="col-md-6 col-sm-6 col-xs-12 form-group has-feedback" style="width:100%">
+                                                            <input type="text" class="form-control has-feedback-left" name="email" required="required" placeholder="Email">
+                                                            <span class="fa fa-envelope form-control-feedback left" aria-hidden="true"></span>
                                                         </div>
                                                     </div>
+                                                    <div class="ln_solid"></div>
+                                                    <div class="form-group">
+                                                        <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+                                                            <button type="reset" class="btn btn-primary">Nhập Lại</button>
+                                                            <button type="submit" class="btn btn-success">Xác Nhận</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                                 }
 
                                             </div>
