--- a/ShopMyPham/ShopMyPham/Views/Category/BrandCategory.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Category/BrandCategory.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="features-area">
-    <div class="container">
+    <div class="container" style="padding-left:75px;">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <div class="section-heading">
