--- a/ShopMyPham/ShopMyPham/Views/Home/Contact.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Home/Contact.cshtml
@@ -5,7 +5,7 @@
 
 <style>
     #shopMap{
-        width:100%;
+        width:80%;
         height:60%;
     }
 </style>
@@ -43,5 +43,14 @@
 
       google.maps.event.addDomListener(window, 'load', initMap);
 </script>
-
-<div class="map" id="shopMap"></div>
+<br /><br />
+<div class="map" id="shopMap" style="margin-left: 125px;"></div>
+<br /><br />
+<div style="margin-left: 125px;">
+    <ul class="footer-menu">
+        <li><i class="fa fa-map-marker"> </i> <strong>Địa chỉ</strong> : Tòa nhà Bitexco, Q.1</li>
+        <li><i class="fa fa-phone"> </i> <strong>Điện thoại</strong> : 01267659090</li>
+        <li><i class="fa fa-fax"> </i> <strong>fax</strong> : (012) 999 9999</li>
+        <li><i class="fa fa-envelope"> </i> <strong>Email</strong> : nhtien@gmail.com</li>
+    </ul>
+</div>
