--- a/ShopMyPham/ShopMyPham/Views/Cart/_CartDetails.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Cart/_CartDetails.cshtml
@@ -136,12 +136,12 @@ else
                                         </tbody>
                                     </table>
 
-                                    <div style="padding-left:150px; text-align:left;">
+                                    @*<div style="padding-left:150px; text-align:left;">
                                         <br />
                                         <input type="radio" name="checkout" value="0" checked /> Thanh toán khi nhận hàng
                                         <br />
                                         <input type="radio" name="checkout" value="1" /> Thanh toán trực tuyến
-                                    </div>
+                                    </div>*@
                                 </div>
                                 <div class="wc-proceed-to-checkout" style="padding-left:200px;">
                                     @Html.ActionLink("Xác Nhận", "CheckOutStep1", "Cart")
