--- a/ShopMyPham/ShopMyPham/Views/Shared/_FooterPartial.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Shared/_FooterPartial.cshtml
@@ -20,8 +20,8 @@
                         <div class="footer-widget">
                             <h3 class="widget-title">Tài khoản</h3>
                             <ul class="footer-menu">
-                                <li><a href="#">Tài khoản của tôi</a></li>
-                                <li><a href="#">Giỏ hàng</a></li>
+                                <li><a href="@Url.Action("userInfo", "Home")">Tài khoản của tôi</a></li>
+                                <li><a href="@Url.Action("Index", "Cart")">Giỏ hàng</a></li>
                             </ul>
                         </div>
                     </div>
