--- a/ShopMyPham/ShopMyPham/Views/Shared/_MainMenuPartial.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Shared/_MainMenuPartial.cshtml
@@ -97,7 +97,7 @@
                             <li>
                                 @foreach (var item in nail)
                                 {
-                                    <a href="@Url.Action("BrandCategory", "Category", new { id = item.ID })">@item.Ten<span></span></a>                                    
+                                    <a href="@Url.Action("MenuCategory", "Category", new { id = item.ID })">@item.Ten<span></span></a>                                    
                                 }
                             </li>
 
