--- a/ShopMyPham/ShopMyPham/Views/Client/Index.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Client/Index.cshtml
@@ -13,19 +13,23 @@
 <br /><br /><br />
 <div style="margin-left: 75px;">
     <div class="contant">
+
         <div class="row1">
+            @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, null, new { @class = "alert alert-danger" })
             <div class="col-sm-4 col-sm-offset-1">
+
+               
                 <div class="login-form">
-                    <!--login form-->
-                    <h2>Login to your account</h2>
                     @using (Html.BeginForm("Login", "Client", FormMethod.Post))
                     {
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true, null)
+                    <!--login form-->
+                        <h2>Login to your account</h2>
+
                         <fieldset>
-                            @Html.TextBoxFor(x => x.Username, new { @placeholder = "Tên đăng nhập", @value = "" })
-                            @Html.PasswordFor(x => x.Password, new { @placeholder = "Mật khẩu" })
-                            <button type="submit" class="btn btn-default">Đăng Nhập</button>
+                            @Html.TextBoxFor(x => x.Username, new { @placeholder = "Tên đăng nhập", @required = "required" })
+                            @Html.PasswordFor(x => x.Password, new { @placeholder = "Mật khẩu", @required = "required" })
+                            <button type="submit" class="btn btn-default ">Đăng Nhập</button>
                         </fieldset>
                     }
                 </div><!--/login form-->
@@ -36,18 +40,14 @@
             <div class="col-sm-4">
                 <div class="signup-form">
                     <!--sign up form-->
-                    <h2>New User Signup!</h2>
                     @using (Html.BeginForm("Register", "Client", FormMethod.Post))
-                    {
-                        @Html.AntiForgeryToken()
-                        @Html.ValidationSummary(true, null)
-                        <fieldset>
-                            @Html.ValidationMessageFor(x => x.Username)
-                            @Html.ValidationMessageFor(x => x.Password)
-                            @Html.ValidationMessageFor(x => x.Phone)
-                            @Html.TextBoxFor(x => x.Username, new { @placeholder = "Tên đăng nhập" })
-                            @Html.PasswordFor(x => x.Password, new { @placeholder = "Mật khẩu" })
-                            @Html.TextBoxFor(x => x.Phone, new { @placeholder = "Số điện thoại" })
+                    {                        
+                        <h2>New User Signup!</h2>
+
+                        <fieldset>                            
+                            @Html.TextBoxFor(x => x.Username, new { @placeholder = "Tên đăng nhập", @required = "required" })
+                            @Html.PasswordFor(x => x.Password, new { @placeholder = "Mật khẩu", @required = "required" })
+                            @Html.TextBoxFor(x => x.Phone, new { @placeholder = "Số điện thoại", @required = "required" })
                             <button type="submit" class="btn btn-default">Đăng Ký</button>
                         </fieldset>
                     }
