--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/BanHang/ListKhuyenMai.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/BanHang/ListKhuyenMai.cshtml
@@ -1,8 +1,7 @@
-﻿
+﻿@model ShopMyPham.Areas.Admin.Models.setKhuyenMaiModel
 @{
     ViewBag.Title = "ListKhuyenMai";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ListKhuyenMai</h2>
 
