--- a/ShopMyPham/ShopMyPham/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ShopMyPham/ShopMyPham/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -78,7 +78,7 @@
             <div class="col-md-3 left_col">
                 <div class="left_col scroll-view">
                     <div class="navbar nav_title" style="border: 0;">
-                        <a href="@Url.Action("Admin", "HomeAdmin")" class="site_title"><i class="fa fa-star"></i> <span>Cosmetic Shop!</span></a>
+                        <a href="@Url.Action("Index", "HomeAdmin")" class="site_title"><i class="fa fa-star"></i> <span>Cosmetic Shop!</span></a>
                     </div>
 
                     <div class="clearfix"></div>
@@ -209,7 +209,7 @@
                                     }
                                     <li>
                                         <div class="text-center">
-                                            <a href="/Admin/BanHang/ListDonDat">
+                                            <a href="@Url.Action("ListDonDat","BanHang")">
                                                 <strong>Xem Tất Cả</strong>
                                                 <i class="fa fa-angle-right"></i>
                                             </a>
