--- a/ShopMyPham/ShopMyPham/Views/Category/Index.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Category/Index.cshtml
@@ -5,13 +5,11 @@
     var Brand = ViewBag.Brand as List<ShopMyPham.Models.ThuongHieu>;
     var relatedProduct = ViewBag.relatedProduct as List<ShopMyPham.Models.SanPham>;
 }
-
 <style>
     .buyProduct:hover {
         box-shadow: 0px 0px 9px rgba(0, 0, 0, 10);
-    }    
+    }
 </style>
-
 
 <br /><br />
 <!-- product-main-area start -->
@@ -25,7 +23,6 @@
                         <div>
                             <!-- Nav tabs -->
                             <ul class="nav nav-tabs" role="tablist"></ul>
-
                             <!-- Tab panes -->
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="one">
@@ -76,14 +73,12 @@
                         <input type="hidden" id="product-id" value="@Model.SanPhamID" />
                         <input type="button" class="buyProduct btn btn-default" style="width:120px;" value="Đặt Hàng" />
                     </div>
-
                     <div class="product-meta">
                         <span class="posted-in">
                             Loại:
                             <a href="#"> @Brand.First().TenTH</a>
                         </span>
                     </div>
-
                     <div id="show_message" style="display:none">
                         @*class="product-page-price">*@
                         <div class="alert alert-warning" role="alert">
@@ -104,12 +99,11 @@
         <div class="row">
             <div class="col-md-12 col-sm-12">
                 <div class="product-tab">
-                    <div>
+                    <div style="padding-left: 75px;">
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
                             <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Mô Tả</a></li>
                         </ul>
-
                         <!-- Tab panes -->
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane active" id="home">
@@ -117,6 +111,7 @@
                                     @foreach (var item in Model.SanPhamHinhs.Skip(1))
                                     {
                                         <img style="display:block; margin:0 auto" src="~/Photos/SP/@item.TenHinh" />
+                                        <br /><br />
                                     }
                                 </div>
                             </div>
@@ -128,34 +123,33 @@
     </div>
 </div>
 <!-- product-main-area end -->
-
-<div class="brand-area">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-heading">
-                    <h3>Các Sản Phẩm Liên Quan</h3>
+<div style="padding-left: 75px;">
+    <div class="brand-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-heading">
+                        <h3>Các Sản Phẩm Liên Quan</h3>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-12">
-                <div class="brand-curosel">
-                    @foreach (var item in relatedProduct)
-                    {
-                        <div class="single-category-tab" style="margin-left: 10px;">
-                            <div class="single-features">
-                                @Html.Raw(@Html.ActionLink("[replacetext]", "Index", "Category", new { id = item.SanPhamID, name = item.SEO }, null).ToHtmlString().Replace("[replacetext]",
+                <div class="col-md-12">
+                    <div class="brand-curosel">
+                        @foreach (var item in relatedProduct)
+                        {
+                            <div class="single-category-tab" style="margin-left: 10px;">
+                                <div class="single-features">
+                                    @Html.Raw(@Html.ActionLink("[replacetext]", "Index", "Category", new { id = item.SanPhamID, name = item.SEO }, null).ToHtmlString().Replace("[replacetext]",
                             "<img style=\"display: block; margin:0 auto; padding-top:10px; max - width: 150px; max - height: 150px; width: 150px; height: 150px;\" class=\"first-img\"  src =\"/Photos/SP/" + item.SanPhamHinhs.First().TenHinh + "\" />"))
-
-                                <div class="product-custom">
-                                    <h5><a href="@Url.Action("Index", "Category", new { id = item.SanPhamID, name = item.SEO })">@item.TenSanPham</a></h5>
-                                    <span class="pro-price" style="text-align:center;">Giá: @string.Format("{0:#,##0 VND}", @item.GiaBan)</span>
+                                    <div class="product-custom">
+                                        <h5><a href="@Url.Action("Index", "Category", new { id = item.SanPhamID, name = item.SEO })">@item.TenSanPham</a></h5>
+                                        <span class="pro-price" style="text-align:center;">Giá: @string.Format("{0:#,##0 VND}", @item.GiaBan)</span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    }
+                        }
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
