--- a/ShopMyPham/ShopMyPham/Views/Shared/_PromotionPartial.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Shared/_PromotionPartial.cshtml
@@ -10,21 +10,21 @@
                 <!-- single-promo start -->
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="single-promo">
-                        <a href="#"><img src="/Content/img/promotion/1.jpg" alt="" /></a>
+                        <a href="#"><img src="~/Photos/Banner/banner4.jpg" style="max-height: 235px; max-width: 360px; height: 235px; width: 360px" alt="" /></a>
                     </div>
                 </div>
                 <!-- single-promo end -->
                 <!-- single-promo start -->
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="single-promo">
-                        <a href="#"><img src="/Content/img/promotion/2.jpg" alt="" /></a>
+                        <a href="#"><img src="~/Photos/Banner/banner5.jpg" style="max-height: 235px; max-width: 360px; height: 235px; width: 360px" alt="" /></a>
                     </div>
                 </div>
                 <!-- single-promo end -->
                 <!-- single-promo start -->
                 <div class="col-lg-4 col-md-4 col-sm-4">
                     <div class="single-promo">
-                        <a href="#"><img src="/Content/img/promotion/3.jpg" alt="" /></a>
+                        <a href="#"><img src="~/Photos/Banner/banner6.jpg" style="max-height: 235px; max-width: 360px; height: 235px; width: 360px" alt="" /></a>
                     </div>
                 </div>
                 <!-- single-promo end -->
