--- a/ShopMyPham/ShopMyPham/Views/Home/userInfo.cshtml
+++ b/ShopMyPham/ShopMyPham/Views/Home/userInfo.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "userInfo";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var user = Session["user"] as ShopMyPham.Models.QuanTri;
+    var list = ViewBag.list as List<ShopMyPham.Models.UserViewModel>;
 }
 <head>
     <link href="/Content/Login_theme/css/responsive.css" rel="stylesheet">
@@ -54,6 +55,116 @@
                 <input type="reset" class="btn btn-default" value="Nhập Lại" style="background-color:lightgoldenrodyellow" />
             }
             
+            <!-- Trigger the modal with a button -->
+            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Đơn Hàng Của Tôi</button>
+
+            <!-- Modal -->
+            <div id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="modal-title">Thông Tin Đơn Hàng</h4>
+                        </div>
+                        <div class="modal-body">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Mã Đơn Đặt</th>
+                                        <th>Tên Khách Hàng</th>
+                                        <th>Ngày Đặt</th>
+                                        <th>Thao Tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @foreach (var HoaDon in list)
+                                    {
+                                        string idPanel = "#" + HoaDon.DonHangID;
+                                        <tr>
+                                            <td>@HoaDon.DonHangID</td>
+                                            <td>@HoaDon.TenKhachHang</td>
+                                            <td>@HoaDon.NgayDatHang</td>
+                                            <td>
+                                                <a href="" data-toggle="modal" data-target=@idPanel><span class="glyphicon glyphicon-eye-open" aria-hidden="true" style="margin-left:10px;border-radius: 50%;border:1px solid #5A738E;padding:5px 5px;"></span></a>                                                
+                                            </td>
+                                        </tr>                                      
+                                    }
+                                </tbody>
+                            </table>
+                            @foreach (var HoaDon in list)
+                            {
+                                <div class="modal fade " id=@HoaDon.DonHangID role="dialog" style="width:800px; height:800px">
+                                    <div class="modal-dialog " >
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                <h4 class="modal-title">Chi Tiết Đơn Đặt</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                            <div class="x_title">
+                                                                <h2>Mã Đơn Đặt: @HoaDon.DonHangID</h2>
+                                                                <div class="clearfix"></div>
+
+                                                            </div>
+                                                            <div >
+                                                                <table width="100%">
+                                                                    <tr>
+                                                                        <td><p>Tên Khách Hàng: @HoaDon.TenKhachHang</p></td>
+                                                                        <td><p>Ngày Đặt: @HoaDon.NgayDatHang</p></td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td><p>Số Điện Thoại: @HoaDon.SoDienThoai</p></td>
+                                                                        <td><p>Địa Chỉ: @HoaDon.DiaChi</p></td>
+                                                                    </tr>
+                                                                </table>
+                                                                <p>Ghi Chú: @HoaDon.GhiChu</p>
+                                                                <table class="table table-hover">
+                                                                    <thead>
+                                                                        <tr>
+                                                                            <th>#</th>
+                                                                            <th>Mã Sản Phẩm</th>
+                                                                            <th>Đơn Giá</th>
+                                                                            <th>Số Lượng</th>
+                                                                            <th>Thành Tiền</th>
+                                                                        </tr>
+                                                                    </thead>
+                                                                    <tbody>
+                                                                        @{
+                                                                            int i = 0;
+                                                                        }
+                                                                        @foreach (var sp in HoaDon.dsSanPham)
+                                                                        {
+                                                                            i++;
+                                                                            <tr>
+                                                                                <th>@i</th>
+                                                                                <td>@sp.SanPhamID</td>
+                                                                                <td>@string.Format("{0:#,##0 VND}", sp.DonGia)</td>
+                                                                                <td>@sp.SoLuong</td>
+                                                                                <td>@string.Format("{0:#,##0 VND}", sp.ThanhTien)</td>
+                                                                            </tr>
+                                                                        }
+                                                                    </tbody>
+                                                                </table>
+                                                            </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <h4>Tổng Tiền: @string.Format("{0:#,##0 VND}", HoaDon.tongTien())</h4>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                                                            }
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div><!--/login form-->
     </div>
 </div>
